Changelog
=========


2.2.5 (unreleased)
------------------

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- Plone 4.2 Support: Cleaned up TAL statements in batching pt.
  [phgross]


2.2.4 (2012-09-25)
------------------

- Update Translations.
  [tschanzt]


2.2.3 (2012-09-19)
------------------

- Update French translations.
  [tschanzt]


2.2.2 (2012-07-31)
------------------

- Adjust the condition to view the personal overview (allow also administrators).
  Issue #1604 Pers. Uebersicht, "admin tabs" auch fuer Administrator ersichtlich machen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1604
  [phgross]


2.2.1 (2012-06-25)
------------------

- Removed task conditioning in get_containg_document_tab, allways return the dossier url.
  [phgross]

- Tasklisting: changed query filter syntax to avoid ORA-00920 errors.
  [phgross]


2.2 (2012-06-20)
----------------

- Personaloverview: show admin_tabs for inbox users and administrators.
  Issue #1604 Pers. Uebersicht, "admin tabs" auch fuer Administrator ersichtlich machen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1604/
  [phgross]

- Add new row: sequence_number to the table for the the document-tab
  Issue #1503 Dokumentenauflistungen: Einfuegen Spalte Dokumentenlaufnummer
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1503/
  [eschmutz]

- Added custom sort for the task_type column.
  Issue #1514 Aufgaben-Tab: Sortierung nach Auftragstyp sortiert nicht alphabetisch
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1514
  [phgross]

- Adjust tranlsation of the assigned_task tab.
  Issue #1545 Namen Anpassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1545
  [phgross]

- Activate and configure tabbedview quickupload plugin for opengever.
  Issue #549 Abklaerung: Drag and drop