@@ -1,0 +1,9 @@
+{
+delay: 30,
+position: 'top center',
+offset: [0, 0],
+events: {
+  def: 'mouseenter,mouseleave',
+  tooltip: 'mouseenter,mouseleave',
+  }
+}
