@@ -12,6 +12,7 @@ from opengever.tabbedview.helper import external_edit_link
 from opengever.tabbedview.helper import overdue_date_helper
 from opengever.tabbedview.helper import readable_date_set_invisibles
 from opengever.tabbedview.helper import readable_ogds_author, linked
+from opengever.tabbedview.helper import linked_document_with_tooltip
 from opengever.tabbedview.helper import readable_ogds_user
 from opengever.tabbedview.helper import workflow_state
 from opengever.tabbedview.interfaces import ITaskCatalogTableSourceConfig
@@ -167,7 +168,7 @@ class Documents(OpengeverCatalogListingTab):
         {'column': 'Title',
          'column_title': _(u'label_title', default=u'Title'),
          'sort_index': 'sortable_title',
-         'transform': linked},
+         'transform': linked_document_with_tooltip},
 
         {'column': 'document_author',
          'column_title': _('label_document_author', default="Document Author"),
